fix navigation layout bug

--- a/sass/layout/_nav.sass
+++ b/sass/layout/_nav.sass
@@ -67,6 +67,7 @@ $nav-link-hover-color : $red-dark
   .fn
     +demi
   p
+    margin: 0
     display: inline-block
   ul
     +delimited-list
